--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 web/public/hardware/Sensor PCB/~Sensor PCB.kicad_pcb.lck
 web/public/hardware/Sensor PCB/\#auto_saved_files\#
+web/public/hardware/Sensor PCB/~Sensor PCB.kicad_sch.lck
